k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: block-watcher
  labels:
    name: block-watcher
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
